@@ -1,29 +1,28 @@
 package com.mcupdater.procenhance.recipe;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
-import com.mcupdater.mculib.helpers.DataHelper;
 import com.mcupdater.mculib.inventory.MachineContainer;
 import com.mcupdater.procenhance.ProcessEnhancement;
+import com.mcupdater.procenhance.setup.Registration;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.GsonHelper;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.*;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.fluids.FluidStack;
-import org.jetbrains.annotations.Nullable;
+import net.neoforged.neoforge.fluids.FluidStack;
+import org.jetbrains.annotations.NotNull;
 
 public class DehydratorRecipe implements Recipe<MachineContainer> {
-	private final ResourceLocation id;
 	private final ItemStack result;
 	private final int processTime;
 	private final NonNullList<Ingredient> itemIngredients;
 	private final FluidStack fluidOutput;
 
-	public DehydratorRecipe(ResourceLocation id, ItemStack output, int processTime, NonNullList<Ingredient> itemIngredients, FluidStack fluidOutput) {
-		this.id = id;
+	public DehydratorRecipe(ItemStack output, int processTime, NonNullList<Ingredient> itemIngredients, FluidStack fluidOutput) {
 		this.result = output;
 		this.processTime = processTime;
 		this.itemIngredients = itemIngredients;
@@ -31,11 +30,12 @@ public class DehydratorRecipe implements Recipe<MachineContainer> {
 	}
 
 	@Override
-	public boolean matches(MachineContainer pContainer, Level pLevel) {
+	public boolean matches(@NotNull MachineContainer pContainer, Level pLevel) {
 		if (pLevel.isClientSide()) {
 			return false;
 		}
-		return itemIngredients.get(0).test(pContainer.getItem(0));
+		ProcessEnhancement.LOGGER.debug("Dehydrator checking recipe");
+		return itemIngredients.getFirst().test(pContainer.getItem(0));
 	}
 
 	public NonNullList<Ingredient> getItemIngredients() {
@@ -47,8 +47,8 @@ public class DehydratorRecipe implements Recipe<MachineContainer> {
 	}
 
 	@Override
-	public ItemStack assemble(MachineContainer pContainer) {
-		return result;
+	public @NotNull ItemStack assemble(@NotNull MachineContainer pContainer, HolderLookup.@NotNull Provider pRegistries) {
+		return this.getResultItem(pRegistries).copy();
 	}
 
 	@Override
@@ -56,79 +56,73 @@ public class DehydratorRecipe implements Recipe<MachineContainer> {
 		return true;
 	}
 
-	@Override
-	public ItemStack getResultItem() {
-		return result.copy();
+	public ItemStack getResult() {
+		return this.result;
 	}
 
 	@Override
-	public ResourceLocation getId() {
-		return id;
+	public @NotNull ItemStack getResultItem(HolderLookup.@NotNull Provider pRegistries) {
+		return this.result;
 	}
 
 	@Override
-	public RecipeSerializer<?> getSerializer() {
-		return Serializer.INSTANCE;
+	public @NotNull RecipeSerializer<?> getSerializer() {
+		return Registration.DEHYDRATOR_SERIALIZER.get();
 	}
 
 	@Override
-	public RecipeType<?> getType() {
-		return Type.INSTANCE;
+	public @NotNull RecipeType<?> getType() {
+		return Registration.DEHYDRATOR_RECIPE.get();
 	}
 
 	public int getProcessTime() {
 		return this.processTime;
 	}
 
-	public static class Type implements RecipeType<DehydratorRecipe> {
-		private Type() {}
-		public static final Type INSTANCE = new Type();
-		public static final String ID = "dehydrator";
-	}
-
 	public static class Serializer implements RecipeSerializer<DehydratorRecipe> {
-		public static final Serializer INSTANCE = new Serializer();
-		public static final ResourceLocation ID = new ResourceLocation(ProcessEnhancement.MODID, "dehydrator");
+		public static final MapCodec<DehydratorRecipe> CODEC = RecordCodecBuilder.mapCodec(
+				inst -> inst.group(
+								// (ItemStack output, int processTime, NonNullList<Ingredient> itemIngredients, FluidStack fluidOutput)
+								ItemStack.STRICT_CODEC.fieldOf("result").forGetter(DehydratorRecipe::getResult),
+								Codec.INT.fieldOf("processTime").forGetter(DehydratorRecipe::getProcessTime),
+								NonNullList.codecOf(Ingredient.CODEC).fieldOf("itemIngredients").forGetter(DehydratorRecipe::getItemIngredients),
+								FluidStack.CODEC.fieldOf("fluidOutput").forGetter(DehydratorRecipe::getFluidOutput)
+						)
+						.apply(inst, DehydratorRecipe::new)
+		);
+
+		public static final StreamCodec<RegistryFriendlyByteBuf, DehydratorRecipe> STREAM_CODEC = StreamCodec.of(
+				DehydratorRecipe.Serializer::toNetwork,
+				DehydratorRecipe.Serializer::fromNetwork
+		);
 
 		@Override
-		public DehydratorRecipe fromJson(ResourceLocation id, JsonObject json) {
-			ItemStack output = ShapedRecipe.itemStackFromJson(GsonHelper.getAsJsonObject(json, "result"));
-			int processTime = GsonHelper.getAsInt(json, "processTime");
-			JsonArray itemIngredientArray = GsonHelper.getAsJsonArray(json, "itemIngredients");
-			NonNullList<Ingredient> itemIngredients = NonNullList.withSize(itemIngredientArray.size(),Ingredient.EMPTY);
-			for (int index = 0; index < itemIngredients.size(); index++) {
-				itemIngredients.set(index,Ingredient.fromJson(itemIngredientArray.get(index)));
-			}
-			FluidStack fluidOutput =  DataHelper.getJsonFluidStack(GsonHelper.getAsJsonObject(json, "fluidOutput"));
-			return new DehydratorRecipe(id, output, processTime, itemIngredients, fluidOutput);
+		public @NotNull MapCodec<DehydratorRecipe> codec() {
+			return CODEC;
 		}
 
 		@Override
-		public @Nullable DehydratorRecipe fromNetwork(ResourceLocation id, FriendlyByteBuf buf) {
+		public @NotNull StreamCodec<RegistryFriendlyByteBuf, DehydratorRecipe> streamCodec() {
+			return STREAM_CODEC;
+		}
+
+		public static DehydratorRecipe fromNetwork(RegistryFriendlyByteBuf buf) {
 			NonNullList<Ingredient> itemIngredients = NonNullList.withSize(buf.readInt(), Ingredient.EMPTY);
-			for(int index = 0; index < itemIngredients.size(); index++) {
-				itemIngredients.set(index, Ingredient.fromNetwork(buf));
-			}
-			FluidStack fluidOutput = FluidStack.readFromPacket(buf);
+			itemIngredients.replaceAll(ignored -> Ingredient.CONTENTS_STREAM_CODEC.decode(buf));
+			FluidStack fluidOutput = FluidStack.STREAM_CODEC.decode(buf);
 			int processTime = buf.readInt();
-			ItemStack output = buf.readItem();
-			return new DehydratorRecipe(id, output, processTime, itemIngredients, fluidOutput);
+			ItemStack output = ItemStack.STREAM_CODEC.decode(buf);
+			return new DehydratorRecipe(output, processTime, itemIngredients, fluidOutput);
 		}
 
-		@Override
-		public void toNetwork(FriendlyByteBuf buf, DehydratorRecipe recipe) {
+		public static void toNetwork(RegistryFriendlyByteBuf buf, DehydratorRecipe recipe) {
 			buf.writeInt(recipe.getItemIngredients().size());
-			for(Ingredient ingredient : recipe.getItemIngredients()) {
-				ingredient.toNetwork(buf);
+			for (Ingredient ingredient : recipe.getItemIngredients()) {
+				Ingredient.CONTENTS_STREAM_CODEC.encode(buf, ingredient);
 			}
-			recipe.fluidOutput.writeToPacket(buf);
-			buf.writeInt(recipe.getProcessTime());
-			buf.writeItemStack(recipe.getResultItem(), false);
-		}
-
-		@SuppressWarnings("unchecked")
-		private static <G> Class<G> castClass(Class<?> cls) {
-			return (Class<G>)cls;
+			FluidStack.STREAM_CODEC.encode(buf, recipe.fluidOutput);
+			buf.writeInt(recipe.processTime);
+			ItemStack.STREAM_CODEC.encode(buf, recipe.result);
 		}
 	}
 }
